# QuantumIDE

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: bell.json  ghz.json  grover.json  qft.json  shor.json
src/quantumide/: __init__.py  __main__.py
src/quantumide/cli/: __init__.py  main.py
src/quantumide/core/: __init__.py  circuit.py  gates.py  templates.py
src/quantumide/io/: __init__.py  pickle_io.py  qasm.py  serialization.py
src/quantumide/optimization/: __init__.py  optimizer.py
src/quantumide/simulation/: __init__.py  simulator.py
src/quantumide/tui/: __init__.py  app.py
src/quantumide/visualization/: __init__.py  ascii.py  charts.py  svg.py
tests/: test_circuit.py  test_io.py  test_optimization.py  test_simulation.py  test_templates.py  test_tui.py  test_visualization.py
